# protosol

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  buf.yaml  build.rs  deps-bundle.sh  deps.sh
.githooks/: pre-commit
.github/workflows/: build.yml  publish.yml
flatbuffers/: block.fbs  context.fbs  elf.fbs  instr.fbs  metadata.fbs  txn.fbs  vm.fbs
proto/: block.options  block.proto  bundle.options  bundle.proto  context.options  context.proto  cost.options  cost.proto  cost_model.options  cost_model.proto  elf.options  elf.proto  gossip.options  gossip.proto  instr.options  invoke.options  invoke.proto  metadata.options  pack.options  pack.proto  pack_runtime.options  pack_runtime.proto  serialize.proto  shred.options  shred.proto  snapshot.proto  txn.options  txn.proto  type.options  type.proto  types.options  vm.options  vm.proto  vm_cpi.options  vm_cpi.proto  vm_serialization.options  vm_serialization.proto
proto_v2/: epoch_v2.proto  exec_v2.options  exec_v2.proto  instr_v2.options  instr_v2.proto  slot_v2.options  slot_v2.proto  txn_v2.options  txn_v2.proto
src/: lib.rs
src/convert/: account.rs  block.rs  context.rs  mod.rs  txn.rs
