[package]
name = "protosol"
version = "9.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Protobuf definitions for the SVM fuzzing project."
repository = "https://github.com/firedancer-io/protosol"
authors = ["Firedancer Team"]
keywords = ["solana", "protobuf", "sealevel", "fuzzing"]
categories = ["encoding"]
readme = "README.md"
links = "protosol"
exclude = ["shlr/", "opt/", ".github/", ".githooks/"]

[build-dependencies]
prost-build = { version = "0.13.1", optional = true }

[dependencies]
prost = "0.11.9"

solana-account = { version = ">=4.0.0, <5.0.0", optional = true }
solana-pubkey = { version = ">=4.0.0, <5.0.0", optional = true }
solana-message = { version = ">=4.0.0, <5.0.0", optional = true }
solana-inflation = { version = ">=3.0.0, <4.0.0", optional = true }

[features]
regenerate = ["prost-build"]
solana-types = [
    "solana-account",
    "solana-pubkey",
    "solana-inflation",
    "solana-message",
]
